example/secondfile/objects/DHStatus_Circuit_Test_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details</description>
    <fields>
        <fullName>Additional_Circuit_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Additional Circuit ID</description>
        <label>Additional Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Remarks__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Additional Remarks</description>
        <label>Additional Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Test_Description__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Additional Test Description</description>
        <label>Additional Test Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Test_Result__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Additional Test Result</description>
        <label>Additional Test Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Ones_High_Density__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-All Ones High Density</description>
        <label>All Ones High Density</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bipolar_8_Zero_Substitution__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Bipolar 8 Zero Substitution</description>
        <label>Bipolar 8 Zero Substitution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Of_Service__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Class Of Service</description>
        <label>Class Of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBSX_Receive_Level__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-DBSX Receive  Level</description>
        <label>DBSX Receive  Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Completion_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Circuit Test Details</description>
        <label>DHStatus-Completion Details</label>
        <referenceTo>DHStatus_Completion_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Circuit Test Details</relationshipLabel>
        <relationshipName>DHStatus_Circuit_Test_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interface_Mode_Description__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Interface Mode Description</description>
        <label>Interface Mode Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Speed__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Interface Speed</description>
        <label>Interface Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Interface Type</description>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop_Contact_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Loop Contact Name</description>
        <label>Loop Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop_Location_Description__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Loop Location Description</description>
        <label>Loop Location Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Density__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Low Density</description>
        <label>Low Density</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium_Density__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Medium Density</description>
        <label>Medium Density</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Port_Speed__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Network Port Speed</description>
        <label>Network Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Port_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Network Port Type</description>
        <label>Network Port Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_Random_Sequence__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Pseudo Random Sequence</description>
        <label>Pseudo Random Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quassi_Random__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Quassi Random</description>
        <label>Quassi Random</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Light_Level__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Receive Light Level</description>
        <label>Receive Light Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Tracking Number</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmit_Light_Level__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-Transmit Light Level</description>
        <label>Transmit Light Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Circuit Test Details-VLAN ID</description>
        <label>VLAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Circuit Test Details</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>DHStatus-Circuit Test Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Circuit Test Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>